--- a/src/common/Layout/Root/Root.module.css
+++ b/src/common/Layout/Root/Root.module.css
@@ -10,4 +10,5 @@
 .root-container {
   position: relative;
   width: 100%;
+  height: 100%;
 }
